--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "chart-js-luxon-reporduction",
+  "name": "chart-js-luxon-reproduction",
   "version": "0.0.0",
   "private": true,
-  "description": "Small description for chart-js-luxon-reporduction goes here",
+  "description": "Small description for chart-js-luxon-reproduction goes here",
   "repository": "",
   "license": "MIT",
   "author": "",
@@ -24,11 +24,14 @@
   },
   "devDependencies": {
     "@ember/optional-features": "^2.0.0",
+    "@ember/render-modifiers": "^2.0.4",
     "@ember/test-helpers": "^2.8.1",
     "@glimmer/component": "^1.1.2",
     "@glimmer/tracking": "^1.1.2",
     "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^3.0.0",
+    "chart.js": "^3.8.0",
+    "chartjs-adapter-luxon": "^1.1.0",
     "ember-auto-import": "^2.4.2",
     "ember-cli": "~4.5.0",
     "ember-cli-app-version": "^5.0.0",
@@ -54,6 +57,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-qunit": "^7.3.0",
     "loader.js": "^4.7.0",
+    "luxon": "^2",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
     "qunit": "^2.19.1",
